<resources>

    <!--Labels-->
    <string name="lbl_bookbase">Bookbase</string>
    <string name="lbl_books">Books</string>
    <string name="lbl_stats">Stats</string>
    <string name="lbl_wishlist">Wishlist</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_about">About</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_scanBarcode">Scan Barcode</string>
    <string name="lbl_book_details_basic">Basic Book Details</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_author">Author</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_review">Review</string>
    <string name="lbl_rating">Rating</string>
    <string name="lbl_read">Read</string>
    <string name="lbl_purchase_date">Purchase Date</string>
    <string name="lbl_purchase_price">Purchase Price</string>
    <string name="lbl_owned">Owned</string>

    <!--Hints-->
    <string name="hint_book_title">To Kill A Mockingbird&#8230;</string>
    <string name="hint_author">Stephen King, Agatha Christie&#8230;</string>
    <string name="hint_description">An epic adventure&#8230;</string>
    <string name="hint_genre">Fantasy, Crime, Thriller&#8230;</string>
    <string name="hint_review">A good overall read&#8230;</string>
    <string name="hint_purchase_date">1/1/2017</string>
    <string name="hint_purchase_price">$22.50</string>

    <!--Misc-->
    <string name="hello_blank_fragment">TODO: Implement Fragment</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="title_activity_edit_book">EditBookActivity</string>
    <string name="cover_content_descr">book cover image</string>
    <string name="lbl_options">Options</string>
    <string name="lbl_edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="lbl_editBook">Edit Book</string>
    <string name="msg_empty_library">Oops&#8230;Looks like you don\'t have any books yet!</string>
    <string name="about_text">Bookbase is a simple personal library management app for Android.</string>
    <string name="licence">MIT License\n\n

        Copyright &#169; 2017 Lachlan Eagling\n\n

        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:\n\n

        The above copyright notice and this permission notice shall be included in all\n
        copies or substantial portions of the Software.\n\n

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.</string>
    <string name="github_link">https://github.com/lachlan-eagling/Bookbase</string>
    <string name="app_version">Version\t</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_appname">Bookbase</string>

</resources>
