<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_books"
            android:icon="@mipmap/ic_book_black_24dp"
            android:title="@string/lbl_books"/>
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@mipmap/ic_list_black_24dp"
            android:title="@string/lbl_wishlist"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/lbl_settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_info_black_24dp"
            android:title="@string/lbl_about"/>
    </group>
</menu>